<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Equivalences</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_button">Start</string>
    <string name="start_equivalence">Start Equivalence</string>
    <string name="end_equivalence">End Equivalence</string>
    <string name="error_message">Not equivalent</string>
    <string name="randomise">Randomise</string>

    <color name="ltgray">#cccccc</color>

    <string name="propositional">Propositional Logic</string>
    <string name="first_order">First Order Logic</string>
    <string name="difficulty">Difficulty:</string>
    <string name="truth_probability">Probability of ┬ or ⊥ atoms:</string>
    <string name="settings">Settings</string>
    <string name="left">\u003C</string>
    <string name="right">\u003E</string>
    <string name="examples">Rules:</string>
    <string name="rules6">Example formula: ∀x∃y[(Px∧Py)→Qxyz]</string>
    <string name="rules2">Surround subformulae after quantifiers with [ ] brackets</string>
    <string name="rules3">Function symbols are not supported</string>
    <string name="rules4">Quantified variables must be unique in nested formulae</string>
    <string name="rules5">Predicate symbols must have a constant arity throughout the formula</string>
    <string name="rules7">When applying rules to ∀x[...], φ and ψ stand for any WFF</string>
    <string name="rules8">θ stands for any WFF with no free occurrences of x</string>
    <string name="rules9">Warning: First Order Logic formulae are not checked for equivalence</string>

    <string-array name="difficulty_array">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Hard</item>
    </string-array>
    
</resources>