<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/relative01" >

    <TextView
        android:id="@+id/equivalences_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/equivalences_title"
        android:layout_alignTop="@+id/select_difficulty"
        android:layout_marginLeft="21dp"
        android:entries="@array/difficulty_array" />

    <Button
        android:id="@+id/propositional_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_order_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/first_order" />

    <Button
        android:id="@+id/first_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/equivalences_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:text="@string/propositional" 
        android:onClick="startPropositional" />

    <TextView
        android:id="@+id/select_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/equivalences_title"
        android:layout_below="@+id/propositional_button"
        android:layout_marginRight="116dp"
        android:layout_marginTop="82dp"
        android:text="@string/difficulty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>